Fixing white space for about, skills, and projects pages

--- a/SkillsStyleSheet.css
+++ b/SkillsStyleSheet.css
@@ -3,6 +3,7 @@
 }
 
 body {
+    min-height: 100%;
     background-color: #191b1f /*#0e171f #21262e*/;
     font-family: Arial;
 }
